--- a/style/projects.css
+++ b/style/projects.css
@@ -23,6 +23,7 @@
     height: 45%; 
     width: 100%;
     scroll-snap-type: y mandatory;
+    scroll-snap-align: start;
     -webkit-overflow-scrolling: touch; 
 }
 
@@ -30,7 +31,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
     height: 24em;
     scroll-snap-align: start;
@@ -38,20 +39,27 @@
 }
 
 .project-picture {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     height: auto; 
     object-fit: contain;
     align-self: center;
     pointer-events: none;
     scale: 70%;
+    flex-shrink: 0;
 }
 
 .project-picture img {
-    width: 30em;
+    width: 100%;
     height: auto;
-    align-self: center;
+    align-self: flex-start;
 }
 
+
 .project-description {
+    display: flex;
+    flex-direction: column;
     margin-top: 10px;
     border-radius: 10px;
     padding: 1em;
